Refactor most stuff